src/main/java/org/example/lsp/correct/IAccount.java
package org.example.lsp.correct;

public interface IAccount {

    void deposit(Double amount);
}
