src/main/java/org/example/lsp/bad/IAccount.java
package org.example.lsp.bad;

public interface IAccount {

    void deposit(Double amount);

    void withdraw(Double amount);
}
